# twitch-clips-analytics

./: 1CMakeLists.txt  CMakeLists.txt  Jenkinsfile  README.md  curl.cpp  docker-compose.yml  jsonParse.cpp  main.cpp  redditAPI.py  runDocker.sh  sqlConnector.cpp
docker/: Dockerfile
headers/: curl.h  extern.h  jsonParse.h  sqlConnector.h
includes/: analyzer.h  curl.h  errorFlag.h  extern.h  jsonParse.h  lyticsGather.h  sqlConnector.h
python/: Dockerfile  requirements.txt
python/lytics_site/: manage.py
python/lytics_site/lytics_site/: settings.py  urls.py  wsgi.py
python/lytics_site/lytics_tables/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
python/lytics_site/lytics_tables/migrations/: 0001_initial.py  0002_auto_20181127_0134.py  0003_auto_20181127_0135.py
python/lytics_site/lytics_tables/static/lytics_tables/: lytics.css  style.css
python/lytics_site/lytics_tables/static/lytics_tables/images/work/Twitch_Logo_Purple_Print/__MACOSX/: ._Twitch_Logo_Purple_Print
python/lytics_site/lytics_tables/static/lytics_tables/images/work/Twitch_Logo_Purple_Print/__MACOSX/Twitch_Logo_Purple_Print/: ._Twitch_Purple_CMYK.ai  ._Twitch_Purple_CMYK.eps  ._Twitch_Purple_CMYK.tif
python/lytics_site/lytics_tables/static/lytics_tables/images/work/Twitch_Logo_Purple_Screen/__MACOSX/: ._Twitch_Logo_Purple_Screen
python/lytics_site/lytics_tables/static/lytics_tables/images/work/Twitch_Logo_Purple_Screen/__MACOSX/Twitch_Logo_Purple_Screen/: ._Twitch_Purple_RGB.ai  ._Twitch_Purple_RGB.eps
python/lytics_site/lytics_tables/static/lytics_tables/js/: lytics.js  scripts.js
python/lytics_site/lytics_tables/templates/lytics_tables/: base.html  clone_index.html  customQuery.html  data.html  index.html  lytics.html  overview.html  slugs.html
python/lytics_site/polls/: tests.py  views.py
python/lytics_site/polls/migrations/: 0001_initial.py
python/lytics_site/polls/templates/polls/: detail.html
python/lytics_site/static/lytics_tables/: clone_style.css  lytics.css  style.css
src/: CMakeLists.txt  analyzer.cpp  curl.cpp  errorFlag.cpp  jsonParse.cpp  lyticsGather.cpp  main.cpp  old_main.cpp  sqlConnector.cpp
test/: CMakeLists.txt  test.hpp  testMain.cpp
